commit for assignment 5

--- a/index.html
+++ b/index.html
@@ -5,57 +5,52 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment 5</title>
-    <script src="js/script.js" defer></script>
+    <script src="js/script.js" defer ></script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <style>
         h1 {margin-bottom: 30px;}
-        label {font-weight: bold;}
-        input, select {margin-bottom: 10px;}
+        label {font-weight: bold; width: 10rem;}
+        input, select {margin-bottom: 10px; }
         form {width: 30%; padding: 20px;}
-        fieldset{border-width: 1; padding: 0;}
-        legend {display: block; margin-bottom: .5rem; font-weight: 600;}
+        fieldset{border:1px solid red; padding: 10px; margin: 5px; background-color: rgb(230, 225, 225); width: 60%;}
+        button {margin-left: 20px;}
     </style>
 </head>
 <body class="mt-2 ml-4">
     <h1>Employee Management System</h1>
-    <form id="empForm">
-        
-            <fieldset><legend> Test  </legend>        </fieldset>
-                <div class="mb-3">
-                    <label for="employeeId" class="form-label" >8-Digit Employee ID</label>
-                    <input type="text" class="form-control" id="employeeId" maxlength="8" required>
-                </div>
-                <div class="mb-3">
-                    <label for="name" class="form-label">Full Name
-                </label>
-                <input type="text" class="form-text" id="name" required>
-                </div>
-                <div class="mb-3">
-                    <label for="digitExtension" class="form-label">4- Digit Extension
-                </label>
-                <input type="text" class="form-text" id="digitExtension" maxlength="4" required>
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputEmail" class="form-label">Email</label>
-                  <input type="email" class="form-control" id="exampleInputEmail" required>
-                  <div id="emailHelp" class="form-text"></div>
-                </div>
-                <div class="mb-3">
-                  <form action="submit">
-                      <label for="department">Department</label> <br>
-                      <select name="department" id="department" required>
-                            <option value="administrative">Administrative</option>
-                            <option value="engineering">Engineering</option>
-                            <option value="executive">Exectutive</option>
-                            <option value="marketing">Marketing</option>
-                            <option value="quality-assurance">Quality Assurance</option>
-                            <option value="sales">Sales</option>
-                      </select>
-                    </form>
-                </div>
-                <button type="submit" class="btn btn-primary">Add Employee</button>
-         
-
-    </form>
+    <fieldset>
+        <form id="empForm">
+            <div >
+                <label for="id" >8-Digit Employee ID</label>
+                <input type="text"    maxlength="8" id="id" required >
+            </div>
+            <div >
+                <label for="empName" >Full Name</label>
+                <input type="text" id="empName" required>
+            </div>
+             <div >
+                 <label for="ext" >4- Digit Extension</label>
+                 <input type="text" id="ext" maxlength="4" required>
+            </div>
+            <div >
+                <label for="email" >Email</label>
+                 <input type="email" id="email" required>
+            </div>
+            <div>
+                <form action="submit">
+                <label for="department">Department</label> <br>
+                <select name="department" id="department" required>
+               <option value="administrative">Administrative</option>
+               <option value="engineering">Engineering</option>
+               <option value="executive">Exectutive</option>
+               <option value="marketing">Marketing</option>
+             <option value="quality-assurance">Quality Assurance</option>
+               <option value="sales">Sales</option>
+              </select>
+               </form>
+              </div >
+                <button type="button" class="submit" id="submit">Add Employee</button><br>
+        </form>
+    </fieldset>
 </body>
 </html>
